Name:                oxy

Version:             0.0.1

Synopsis:            A concurrent and simple forwarding proxy server

Description:         Oxy provides a light-weight and highly concurrent forwarding proxy server

Homepage:            https://bitbucket.org/ixmatus/oxy

License:             BSD3

License-file:        LICENSE

Author:              Parnell Springmeyer

Maintainer:          ixmatus@gmail.com

Copyright:           (c) 2012 Parnell Springmeyer

Category:            Proxy Network

Build-type:          Simple

Stability:           alpha

Bug-reports:         https://bitbucket.org/ixmatus/oxy/issues

Package-url:         http://hackage.haskell.org/package/oxy

Tested-with:         GHC == 7.4.1

Data-files:          README.md

Cabal-version:       >=1.14.0

Executable oxy

  Main-is: oxy.hs

  Hs-source-dirs: src

  cpp-options: -Dcabal
  
  Ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

  Build-depends: base >= 4.2.0.0 && < 4.6,
                 cmdargs >= 0.10.1 && < 0.11,
                 hslogger >= 1.2.1 && < 1.3,
                 network-fancy >= 0.1.5.1,
                 ansi-terminal >= 0.5.5,
                 MissingH >= 1.2.0.0,
                 ConfigFile >= 1.1.1,
                 mtl >= 2.1.2,
                 process >= 1.1.0.1

Source-repository head
  Type:     hg
  Location: https://bitbucket.org/ixmatus/oxy